* Wed Jul 06 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.2.3-0
- Fixed a permissions flapping issue between a file resource and the 'sync'
  provider.

* Tue Apr 12 2016 Kendall Moore <kendall.moore@onyxpoint.com> - 4.2.2-0
- Removed custom type deprecation warning

* Mon Mar 28 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.2.1-0
- Removed extraneous cacerts keys
- Updated the README
- Fixed code comments

* Sat Mar 19 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.2.0-0
- Added the ability to copy from arbitrary OS locations for pki::copy. This was
  mainly to support stunnel.

* Tue Feb 23 2016 Ralph Wright <ralph.wright@onyxpoint.com> - 4.1.0-9
- Added compliance function support

* Mon Jan 18 2016 Carl Caum <carl@puppetlabs.com> - 4.1.0-8
- Allow PKI file content source to be modified.

* Mon Dec 14 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.0-7
- Remove erroneous test5.simp.vm key from the keydist directory

* Mon Nov 09 2015 Chris Tessmer <chris.tessmer@onyxpoint.com> - 4.1.0-6
- Migration to simplib and simpcat (lib/ only)

* Tue Oct 13 2015 Nick Markowski <nmarkowski@keywcorp.com> - 4.1.0-5
- If a directory is placed in keydist/cacerts, the directory structure is copied
  to pki/cacerts, and all certs in subdirectories are appended to cacerts.pem.
- If a directory is removed from keydist/cacerts, it is now forcibly removed
  from .cacerts_ingress.

* Thu Feb 12 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.0-4
- Moved things to the new 'simp' environment
- Ensure the requirements on packages are appropriately defined

* Mon Feb 09 2015 Nick Markowski <nmarkowski@keywcorp.com> - 4.1.0-3
- A public RSA key is now generated off off the system private key, and
  placed in /etc/pki/public/fqdn_rsa.pem

* Sun Jun 22 2014 Kendall Moore <kmoore@keywcorp.com> - 4.1.0-2
- Removed MD5 file checksums for FIPS compliance.

* Fri Jun 20 2014 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.0-2
- Modified code in the pki_cert_sync provider for Ruby 2